syntax = "proto3";

package status.v1;

message FetchStatusRequest {}

message FetchStatusResponse {
  bool healthy = 1;
  string message = 2;
}

service StatusService {
  rpc FetchStatus(FetchStatusRequest) returns (FetchStatusResponse) {};
}